--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "lucide-react": "^0.525.0",
     "nodemailer": "^7.0.4",
     "react-icons": "^5.5.0"
   },
