--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "joblogr",
+  "version": "1.0.0",
+  "main": "server.js",
   "dependencies": {
     "@iconify/react": "^6.0.0",
     "cors": "^2.8.5",
